--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                 <!-- Side Widget Well -->
                 <div>
 		  <img class="img-responsive img-rounded" src="dptam.jpg">
-		  <span><span style="padding-left:1px; padding-right:2px;"><i class="icon-map-marker icon-large"></i></span> Amherst, Massachusetts, USA</span><br/>
-		  <span><span style="padding-right:2px;"><i class="icon-envelope"></i></span> dptam (at) cs (dot) umass (dot) edu</span><br/>
+		  <span><span style="padding-right:2px;"><i class="icon-envelope"></i></span> dptam [at] cs [dot] umass [dot] edu</span><br/>
 <!--       <span><span style="padding-left:2px; padding-right:2px;"><i class="icon-file"></i></span> <a href="resume.pdf">resume</a></span><br/>
  -->      <span><span style="padding-right:1px;"><i class="icon-github-alt icon"></i></span> <a href="http://github.com/dptam"> http://github.com/dptam</a></span><br/>
 
@@ -59,7 +58,7 @@
 
             <!-- Blog Entries Column -->
             <div class="col-md-8 col-md-pull-4">
-              <p>I'm a masters student studying computer science
+              <p>I am a Masters student studying Computer Science
                   at <a href="http://www.cs.umass.edu">University of Massachusetts
                   Amherst</a> interested in Natural Language Processing and Deep Learning.
                   </p>
