--- a/index.html
+++ b/index.html
@@ -40,17 +40,14 @@
 
       <h1 class="page-header">Derek Tam</h1>
       <div class="row">
-            <!-- Blog Sidebar Widgets Column -->
             <div class="col-md-4 col-md-push-8">
-                <!-- Side Widget Well -->
-                <div>
-		  <img class="img-responsive img-rounded" src="dptam.jpg">
-		  <span><span style="padding-right:2px;"><i class="icon-envelope"></i></span> dptam [at] cs [dot] umass [dot] edu</span><br/>
-<!--       <span><span style="padding-left:2px; padding-right:2px;"><i class="icon-file"></i></span> <a href="resume.pdf">resume</a></span><br/>
- -->      <span><span style="padding-right:1px;"><i class="icon-github-alt icon"></i></span> <a href="http://github.com/dptam"> http://github.com/dptam</a></span><br/>
+              <div>
+		              <img class="img-responsive img-rounded" src="dptam.jpg">
+		              <span><span style="padding-right:2px;"><i class="icon-envelope"></i></span> dptam [at] cs [dot] umass [dot] edu</span><br/>
+                  <span><span style="padding-right:1px;"><i class="icon-github-alt icon"></i></span> <a href="http://github.com/dptam"> http://github.com/dptam</a></span><br/>
 
-		  <br />
-		  <br />
+		        <br />
+		        <br />
 
                 </div>
             </div>
@@ -61,13 +58,32 @@
               <p>I am a Masters student studying Computer Science
                   at <a href="http://www.cs.umass.edu">University of Massachusetts
                   Amherst</a> interested in Natural Language Processing and Deep Learning.
-                  </p>
+              </p>
+
+
+          <h2>Publications</h2>
+          <ul class="icons-ul">
+            <li><i class="icon-li
+                icon-plus"></i>Optimal Transport-based Alignment
+                of Learned Character Representations for String
+                Similarity.  (<strong>Oral
+                Presentation</strong>)<br /> <strong>Tam, D.</strong>, Monath,
+                N., Kobren, A., Traylor, A., Das,
+                R., McCallum, A.<br /><em>Association of
+                Computational Linguistics (ACL)</em> July
+                2019.<br/>
+                [<a href="https://arxiv.org/abs/1907.10165">arXiv</a>][<a href="https://github.com/iesl/stance">code</a>]
+              </li>
+
+            </ul>
 
                 <hr>
                 <h3>About Me</h3>
                 I received a B.S. in Computer Science and Statistics from <a href="https://www.cs.cmu.edu/">Carnegie Mellon University</a>. 
 
             </div>
+
+
 
       </div>
       <!-- /.container -->
