--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
 
             <!-- Blog Entries Column -->
             <div class="col-md-8 col-md-pull-4">
-              <p>I am a Masters student studying Computer Science
-                  at <a href="http://www.cs.umass.edu">University of Massachusetts
-                  Amherst</a> interested in Natural Language Processing and Deep Learning.
+              <p>I am a second year Masters student working in the 
+                <a href= "http://www.iesl.cs.umass.edu/"> Information and Extraction Synthesis lab </a> at  
+                <a href="http://www.cs.umass.edu"> University of Massachusetts Amherst</a>. I am interested in Natural Language Processing and Machine Learning.
               </p>
 
 
           <h2>Publications</h2>
           <ul class="icons-ul">
             <li><i class="icon-li
-                icon-plus"></i>Optimal Transport-based Alignment
+                icon-plus"></i>  <a href= "https://www.aclweb.org/anthology/P19-1592/" > Optimal Transport-based Alignment
                 of Learned Character Representations for String
-                Similarity.  (<strong>Oral
+                Similarity. </a> (<strong>Oral
                 Presentation</strong>)<br /> <strong>Tam, D.</strong>, Monath,
                 N., Kobren, A., Traylor, A., Das,
                 R., McCallum, A.<br /><em>Association of
@@ -77,13 +77,21 @@
 
             </ul>
 
-                <hr>
+
                 <h3>About Me</h3>
                 I received a B.S. in Computer Science and Statistics from <a href="https://www.cs.cmu.edu/">Carnegie Mellon University</a>. 
-
+                <hr>
             </div>
 
-
+            <footer>
+              <div class="row">
+                <div class="col-lg-12">
+                  <p>   Site Design from<a href="https://akobre01.github.io/"> Ari Kobren </a> </p>
+                </div>
+                <!-- /.col-lg-12 -->
+              </div>
+              <!-- /.row -->
+            </footer>
 
       </div>
       <!-- /.container -->
