--- a/index.html
+++ b/index.html
@@ -55,14 +55,17 @@
 
             <!-- Blog Entries Column -->
             <div class="col-md-8 col-md-pull-4">
-              <p>I am a second year Masters student working in the 
-                <a href= "http://www.iesl.cs.umass.edu/"> Information and Extraction Synthesis lab </a> at  
-                <a href="http://www.cs.umass.edu"> University of Massachusetts Amherst</a>. I am interested in Natural Language Processing and Machine Learning.
+              <p>I am a Ph.D. student at <a href="https://cs.unc.edu/">UNC Chapel Hill</a> working with Prof  <a href="https://colinraffel.com/">Colin Raffel</a> and Prof <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal </a>. I am interested in developing more robust NLP models and understanding what knowledge NLP models can learn.  
               </p>
 
 
           <h2>Publications</h2>
           <ul class="icons-ul">
+            <li><i class="icon-li
+                icon-plus"></i>  <a href= "https://openreview.net/pdf?id=pJg1LahGc0" > Predicting Institution Hierarchies with Set-based Models. </a> <br />  <strong>Tam, D.</strong>, Monath,
+                N., Kobren, A., McCallum, A.<br /><em>Automated Knowledge Base Construction (AKBC)</em> May
+                2020.<br/>[<a href="https://github.com/iesl/institution_hierarchies">code</a>]
+              </li>
             <li><i class="icon-li
                 icon-plus"></i>  <a href= "https://www.aclweb.org/anthology/P19-1592/" > Optimal Transport-based Alignment
                 of Learned Character Representations for String
@@ -75,11 +78,14 @@
                 [<a href="https://arxiv.org/abs/1907.10165">arXiv</a>][<a href="https://github.com/iesl/stance">code</a>]
               </li>
 
+
             </ul>
 
 
                 <h3>About Me</h3>
-                I received a B.S. in Computer Science and Statistics from <a href="https://www.cs.cmu.edu/">Carnegie Mellon University</a>. 
+                Previously, I worked in Prof <a href="https://people.cs.umass.edu/~mccallum/"> Andrew McCallum</a>`s  <a href= "http://www.iesl.cs.umass.edu/"> Information and Extraction Synthesis lab </a>  while receiving a M.S. in Computer Science at the <a href="http://www.cs.umass.edu"> University of Massachusetts Amherst</a>. Before that, I received a B.S. in Computer Science and Statistics from <a href="https://www.cs.cmu.edu/">Carnegie Mellon University</a>. 
+             
+       
                 <hr>
             </div>
 
