--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="col-md-4 col-md-push-8">
               <div>
 		              <img class="img-responsive img-rounded" src="dptam.jpg">
-		              <span><span style="padding-right:2px;"><i class="icon-envelope"></i></span> dptam [at] cs [dot] umass [dot] edu</span><br/>
+		              <span><span style="padding-right:2px;"><i class="icon-envelope"></i></span> dt [dot] derek [dot] tam [at] gmail.com</span><br/>
                   <span><span style="padding-right:1px;"><i class="icon-github-alt icon"></i></span> <a href="http://github.com/dptam"> http://github.com/dptam</a></span><br/>
 
 		        <br />
