--- a/index.html
+++ b/index.html
@@ -62,17 +62,21 @@
           <h2>Publications</h2>
           <ul class="icons-ul">
             <li><i class="icon-li
-                icon-plus"></i>  <a href= "https://openreview.net/pdf?id=pJg1LahGc0" > Predicting Institution Hierarchies with Set-based Models. </a> <br />  <strong>Tam, D.</strong>, Monath,
-                N., Kobren, A., McCallum, A.<br /><em>Automated Knowledge Base Construction (AKBC)</em> May
+                icon-plus"></i>  An Empirical Survey of Data Augmentation for Limited Data Learning in NLP  </a> <br /> Jiaao Chen*,  <strong>Derek Tam* </strong>, Colin Raffel, Mohit Bansal, Diyi Yang   <br /><em>Arxiv</em> June 2021.<br/> [<a href="https://arxiv.org/abs/2106.07499">arXiv</a>]
+              </li>
+            <li><i class="icon-li
+                icon-plus"></i>  Improving and Simplifying Pattern Exploiting Training  </a> <br />  <strong>Derek Tam* </strong>, Rakesh R Menon*, Mohit Bansal, Shashank Srivastava, Colin Raffel <br /><em>Arxiv</em> March 2021.<br/> [<a href="https://arxiv.org/abs/2103.11955">arXiv</a>] [<a href="https://github.com/rrmenon10/ADAPET">code</a>]
+              </li>
+            <li><i class="icon-li
+                icon-plus"></i>  <a href= "https://openreview.net/pdf?id=pJg1LahGc0" > Predicting Institution Hierarchies with Set-based Models. </a> <br />  <strong>Derek Tam</strong>, Nicholas Monath, Ari Kobren, Andrew McCallum <br /><em>Automated Knowledge Base Construction (AKBC)</em> May
                 2020.<br/>[<a href="https://github.com/iesl/institution_hierarchies">code</a>]
               </li>
             <li><i class="icon-li
                 icon-plus"></i>  <a href= "https://www.aclweb.org/anthology/P19-1592/" > Optimal Transport-based Alignment
                 of Learned Character Representations for String
                 Similarity. </a> (<strong>Oral
-                Presentation</strong>)<br /> <strong>Tam, D.</strong>, Monath,
-                N., Kobren, A., Traylor, A., Das,
-                R., McCallum, A.<br /><em>Association of
+                Presentation</strong>)<br /> <strong>Derek Tam</strong>, Nicholas Monath,
+                , Ari Kobren., Aaron Traylor, Rajarshi Das, Andrew McCallum<br /><em>Association of
                 Computational Linguistics (ACL)</em> July
                 2019.<br/>
                 [<a href="https://arxiv.org/abs/1907.10165">arXiv</a>][<a href="https://github.com/iesl/stance">code</a>]
