--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <!-- Blog Entries Column -->
             <div class="col-md-8 col-md-pull-4">
-              <p>I am a Ph.D. student at <a href="https://cs.unc.edu/">UNC Chapel Hill</a> working with Prof  <a href="https://colinraffel.com/">Colin Raffel</a> and Prof <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal </a>. I am interested in learning from limited data for NLP.  
+              <p>I am a Ph.D. student at <a href="https://cs.unc.edu/">UNC Chapel Hill</a> working with Prof  <a href="https://colinraffel.com/">Colin Raffel</a> and Prof <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal </a>. I am interested in continual learning, multi-task learning, learning from limited data for NLP.  
               </p>
 
 
