--- a/index.html
+++ b/index.html
@@ -55,12 +55,15 @@
 
             <!-- Blog Entries Column -->
             <div class="col-md-8 col-md-pull-4">
-              <p>I am a Ph.D. student at <a href="https://cs.unc.edu/">UNC Chapel Hill</a> working with Prof  <a href="https://colinraffel.com/">Colin Raffel</a> and Prof <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal </a>. I am interested in continual learning, multi-task learning, learning from limited data for NLP.  
+              <p>I am a Ph.D. student at <a href="https://cs.unc.edu/">UNC Chapel Hill</a> working with Prof  <a href="https://colinraffel.com/">Colin Raffel</a> and Prof <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal </a>. I am interested in continual learning, multi-task learning, learning from limited data for NLP.  I spent the summers of 2021 interning at Amazon with <a href="http://mtresearcher.github.io/"> Dr. Prashant Mathur</a>.  
               </p>
 
 
           <h2>Publications</h2>
           <ul class="icons-ul">
+            <li><i class="icon-li
+                icon-plus"></i>  Prosody-Aware Neural Machine Translation for Dubbing  </a> <br /> <strong>Derek Tam</strong>, Surafel M. Lakew, Yogesh Virkar, Prashant Mathur, Marcello Federico  <br /><em>Arxiv</em> June 2021.<br/> [<a href="https://arxiv.org/abs/2112.08548">arXiv</a>]
+              </li>
             <li><i class="icon-li
                 icon-plus"></i>  An Empirical Survey of Data Augmentation for Limited Data Learning in NLP  </a> <br /> Jiaao Chen*,  <strong>Derek Tam* </strong>, Colin Raffel, Mohit Bansal, Diyi Yang   <br /><em>Arxiv</em> June 2021.<br/> [<a href="https://arxiv.org/abs/2106.07499">arXiv</a>]
               </li>
