update emnlp paper

--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
             <li><i class="icon-li
                 icon-plus"></i>  Prosody-Aware Neural Machine Translation for Dubbing  </a> <br /> <strong>Derek Tam</strong>, Surafel M. Lakew, Yogesh Virkar, Prashant Mathur, Marcello Federico  <br /><em>Arxiv</em> June 2021.<br/> [<a href="https://arxiv.org/abs/2112.08548">arXiv</a>]
               </li>
+              <li><i class="icon-li
+                icon-plus"></i>  Improving and Simplifying Pattern Exploiting Training  </a> <br />  <strong>Derek Tam* </strong>, Rakesh R Menon*, Mohit Bansal, Shashank Srivastava, Colin Raffel <br /><em>Empirical Methods in Natural Language Processing (EMNLP) </em> November 2021.<br/> [<a href="https://arxiv.org/abs/2103.11955">arXiv</a>] [<a href="https://github.com/rrmenon10/ADAPET">code</a>]
+              </li>
             <li><i class="icon-li
                 icon-plus"></i>  An Empirical Survey of Data Augmentation for Limited Data Learning in NLP  </a> <br /> Jiaao Chen*,  <strong>Derek Tam* </strong>, Colin Raffel, Mohit Bansal, Diyi Yang   <br /><em>Arxiv</em> June 2021.<br/> [<a href="https://arxiv.org/abs/2106.07499">arXiv</a>]
               </li>
-            <li><i class="icon-li
-                icon-plus"></i>  Improving and Simplifying Pattern Exploiting Training  </a> <br />  <strong>Derek Tam* </strong>, Rakesh R Menon*, Mohit Bansal, Shashank Srivastava, Colin Raffel <br /><em>Arxiv</em> March 2021.<br/> [<a href="https://arxiv.org/abs/2103.11955">arXiv</a>] [<a href="https://github.com/rrmenon10/ADAPET">code</a>]
-              </li>
+
             <li><i class="icon-li
                 icon-plus"></i>  <a href= "https://openreview.net/pdf?id=pJg1LahGc0" > Predicting Institution Hierarchies with Set-based Models. </a> <br />  <strong>Derek Tam</strong>, Nicholas Monath, Ari Kobren, Andrew McCallum <br /><em>Automated Knowledge Base Construction (AKBC)</em> May
                 2020.<br/>[<a href="https://github.com/iesl/institution_hierarchies">code</a>]
