--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <div class="col-md-4 col-md-push-8">
               <div>
 		              <img class="img-responsive img-rounded" src="dptam.jpg">
-		              <span><span style="padding-right:2px;"><i class="icon-envelope"></i></span> dt [dot] derek [dot] tam [at] gmail.com</span><br/>
-                  <span><span style="padding-right:1px;"><i class="icon-github-alt icon"></i></span> <a href="http://github.com/dptam"> http://github.com/dptam</a></span><br/>
-
+		              <span><span style="padding-right:2px;"></span> dt [dot] derek [dot] tam [at] gmail.com</span><br/>
+		              <span> <span style="padding-right:1px;"></span> [<a href="https://scholar.google.com/citations?user=v30AKYMemPgC&hl=en&authuser=1">Google Scholar</a>]</span><br/>
+	                  <span><span style="padding-right:1px;"></span> [<a href="http://github.com/dptam">Github</a>]</span><br/>
 		        <br />
 		        <br />
 
@@ -55,20 +55,23 @@
 
             <!-- Blog Entries Column -->
             <div class="col-md-8 col-md-pull-4">
-              <p>I am a Ph.D. student at <a href="https://cs.unc.edu/">UNC Chapel Hill</a> working with Prof  <a href="https://colinraffel.com/">Colin Raffel</a> and Prof <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal </a>. I am interested in continual learning, multi-task learning, learning from limited data for NLP.  I spent the summers of 2021 interning at Amazon with <a href="http://mtresearcher.github.io/"> Dr. Prashant Mathur</a>.  
+              <p>I am a Ph.D. student at <a href="https://cs.unc.edu/">UNC Chapel Hill</a> working with Prof  <a href="https://colinraffel.com/">Colin Raffel</a> and Prof <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal </a>. I am interested in updating lanuguage models efficiently and few-shot learning. 
               </p>
 
 
           <h2>Publications</h2>
           <ul class="icons-ul">
+          	 <li><i class="icon-li
+                icon-plus"></i>  Few-Shot Parameter-Efficient Fine-Tuning is Better and Cheaper than In-Context Learning  </a> <br /> Haokun Liu*, <strong> Derek Tam*</strong>, Mohammed Muqeeth*, Jay Mohta, Tenghao Huang, Mohit Bansal, Colin Raffel  <br /><em> Arxiv </em> May 2022.<br/> [<a href="https://arxiv.org/abs/2205.05638">arXiv</a>] [<a href="https://github.com/r-three/t-few">code</a>]
+              </li>
             <li><i class="icon-li
-                icon-plus"></i>  Prosody-Aware Neural Machine Translation for Dubbing  </a> <br /> <strong>Derek Tam</strong>, Surafel M. Lakew, Yogesh Virkar, Prashant Mathur, Marcello Federico  <br /><em>Arxiv</em> June 2021.<br/> [<a href="https://arxiv.org/abs/2112.08548">arXiv</a>]
+                icon-plus"></i> Isochrony-Aware Neural Machine Translation for Automatic Dubbing  </a> <br /> <strong>Derek Tam</strong>, Surafel M. Lakew, Yogesh Virkar, Prashant Mathur, Marcello Federico  <br /><em> Interspeech </em> September 2022.<br/> [<a href="https://arxiv.org/abs/2112.08548">arXiv</a>]
               </li>
               <li><i class="icon-li
-                icon-plus"></i>  Improving and Simplifying Pattern Exploiting Training  </a> <br />  <strong>Derek Tam* </strong>, Rakesh R Menon*, Mohit Bansal, Shashank Srivastava, Colin Raffel <br /><em>Empirical Methods in Natural Language Processing (EMNLP) </em> November 2021.<br/> [<a href="https://arxiv.org/abs/2103.11955">arXiv</a>] [<a href="https://github.com/rrmenon10/ADAPET">code</a>]
+                icon-plus"></i>  <a href= "https://aclanthology.org/2021.emnlp-main.407/" >  Improving and Simplifying Pattern Exploiting Training  </a> <br />  <strong>Derek Tam*</strong>, Rakesh R Menon*, Mohit Bansal, Shashank Srivastava, Colin Raffel <br /><em>Empirical Methods in Natural Language Processing (EMNLP) </em> November 2021.<br/> [<a href="https://arxiv.org/abs/2103.11955">arXiv</a>] [<a href="https://github.com/rrmenon10/ADAPET">code</a>]
               </li>
             <li><i class="icon-li
-                icon-plus"></i>  An Empirical Survey of Data Augmentation for Limited Data Learning in NLP  </a> <br /> Jiaao Chen*,  <strong>Derek Tam* </strong>, Colin Raffel, Mohit Bansal, Diyi Yang   <br /><em>Arxiv</em> June 2021.<br/> [<a href="https://arxiv.org/abs/2106.07499">arXiv</a>]
+                icon-plus"></i>  An Empirical Survey of Data Augmentation for Limited Data Learning in NLP  </a> <br /> Jiaao Chen*,  <strong>Derek Tam*</strong>, Colin Raffel, Mohit Bansal, Diyi Yang   <br /><em>Arxiv</em> June 2021.<br/> [<a href="https://arxiv.org/abs/2106.07499">arXiv</a>]
               </li>
 
             <li><i class="icon-li
@@ -79,8 +82,7 @@
                 icon-plus"></i>  <a href= "https://www.aclweb.org/anthology/P19-1592/" > Optimal Transport-based Alignment
                 of Learned Character Representations for String
                 Similarity. </a> (<strong>Oral
-                Presentation</strong>)<br /> <strong>Derek Tam</strong>, Nicholas Monath,
-                , Ari Kobren., Aaron Traylor, Rajarshi Das, Andrew McCallum<br /><em>Association of
+                Presentation</strong>)<br /> <strong>Derek Tam</strong>, Nicholas Monath, Ari Kobren, Aaron Traylor, Rajarshi Das, Andrew McCallum<br /><em>Association of
                 Computational Linguistics (ACL)</em> July
                 2019.<br/>
                 [<a href="https://arxiv.org/abs/1907.10165">arXiv</a>][<a href="https://github.com/iesl/stance">code</a>]
@@ -91,7 +93,7 @@
 
 
                 <h3>About Me</h3>
-                Previously, I worked in Prof <a href="https://people.cs.umass.edu/~mccallum/"> Andrew McCallum</a>`s  <a href= "http://www.iesl.cs.umass.edu/"> Information and Extraction Synthesis lab </a>  while receiving a M.S. in Computer Science at the <a href="http://www.cs.umass.edu"> University of Massachusetts Amherst</a>. Before that, I received a B.S. in Computer Science and Statistics from <a href="https://www.cs.cmu.edu/">Carnegie Mellon University</a>. 
+                I spent the summers of 2021 and 2022 interning at Amazon. Previously, I worked in Prof <a href="https://people.cs.umass.edu/~mccallum/"> Andrew McCallum</a>`s  <a href= "http://www.iesl.cs.umass.edu/"> Information and Extraction Synthesis Lab </a>  while receiving a M.S. in Computer Science at the <a href="http://www.cs.umass.edu"> University of Massachusetts Amherst</a>. Before that, I received a B.S. in Computer Science and Statistics from <a href="https://www.cs.cmu.edu/">Carnegie Mellon University</a>. Ultimately, I aim to live in obedience to and unto the glory of my Lord and Savior Jesus Christ.
              
        
                 <hr>
