--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@
           <h2>Publications</h2>
           <ul class="icons-ul">
           	 <li><i class="icon-li
-                icon-plus"></i>  Few-Shot Parameter-Efficient Fine-Tuning is Better and Cheaper than In-Context Learning  </a> <br /> Haokun Liu*, <strong> Derek Tam*</strong>, Mohammed Muqeeth*, Jay Mohta, Tenghao Huang, Mohit Bansal, Colin Raffel  <br /><em> Arxiv </em> May 2022.<br/> [<a href="https://arxiv.org/abs/2205.05638">arXiv</a>] [<a href="https://github.com/r-three/t-few">code</a>]
+                icon-plus"></i>  Few-Shot Parameter-Efficient Fine-Tuning is Better and Cheaper than In-Context Learning  </a> <br /> Haokun Liu*, <strong> Derek Tam*</strong>, Mohammed Muqeeth*, Jay Mohta, Tenghao Huang, Mohit Bansal, Colin Raffel  <br /><em> arXiv </em> May 2022.<br/> [<a href="https://arxiv.org/abs/2205.05638">arXiv</a>] [<a href="https://github.com/r-three/t-few">code</a>]
               </li>
             <li><i class="icon-li
-                icon-plus"></i> Isochrony-Aware Neural Machine Translation for Automatic Dubbing  </a> <br /> <strong>Derek Tam</strong>, Surafel M. Lakew, Yogesh Virkar, Prashant Mathur, Marcello Federico  <br /><em> Interspeech </em> September 2022.<br/> [<a href="https://arxiv.org/abs/2112.08548">arXiv</a>]
+                icon-plus"></i> Isochrony-Aware Neural Machine Translation for Automatic Dubbing  </a> <br /> <strong>Derek Tam</strong>, Surafel M. Lakew, Yogesh Virkar, Prashant Mathur, Marcello Federico  <br /><em> Interspeech </em> 2022.<br/> [<a href="https://arxiv.org/abs/2112.08548">arXiv</a>]
               </li>
               <li><i class="icon-li
-                icon-plus"></i>  <a href= "https://aclanthology.org/2021.emnlp-main.407/" >  Improving and Simplifying Pattern Exploiting Training  </a> <br />  <strong>Derek Tam*</strong>, Rakesh R Menon*, Mohit Bansal, Shashank Srivastava, Colin Raffel <br /><em>Empirical Methods in Natural Language Processing (EMNLP) </em> November 2021.<br/> [<a href="https://arxiv.org/abs/2103.11955">arXiv</a>] [<a href="https://github.com/rrmenon10/ADAPET">code</a>]
+                icon-plus"></i>  <a href= "https://aclanthology.org/2021.emnlp-main.407/" >  Improving and Simplifying Pattern Exploiting Training  </a> <br />  <strong>Derek Tam*</strong>, Rakesh R Menon*, Mohit Bansal, Shashank Srivastava, Colin Raffel <br /><em>Empirical Methods in Natural Language Processing </em> EMNLP 2021 (Short).<br/> [<a href="https://arxiv.org/abs/2103.11955">arXiv</a>] [<a href="https://github.com/rrmenon10/ADAPET">code</a>]
               </li>
             <li><i class="icon-li
-                icon-plus"></i>  An Empirical Survey of Data Augmentation for Limited Data Learning in NLP  </a> <br /> Jiaao Chen*,  <strong>Derek Tam*</strong>, Colin Raffel, Mohit Bansal, Diyi Yang   <br /><em>Arxiv</em> June 2021.<br/> [<a href="https://arxiv.org/abs/2106.07499">arXiv</a>]
+                icon-plus"></i>  An Empirical Survey of Data Augmentation for Limited Data Learning in NLP  </a> <br /> Jiaao Chen*,  <strong>Derek Tam*</strong>, Colin Raffel, Mohit Bansal, Diyi Yang   <br /><em>arXiv</em> June 2021.<br/> [<a href="https://arxiv.org/abs/2106.07499">arXiv</a>]
               </li>
 
             <li><i class="icon-li
-                icon-plus"></i>  <a href= "https://openreview.net/pdf?id=pJg1LahGc0" > Predicting Institution Hierarchies with Set-based Models. </a> <br />  <strong>Derek Tam</strong>, Nicholas Monath, Ari Kobren, Andrew McCallum <br /><em>Automated Knowledge Base Construction (AKBC)</em> May
+                icon-plus"></i>  <a href= "https://openreview.net/pdf?id=pJg1LahGc0" > Predicting Institution Hierarchies with Set-based Models. </a> <br />  <strong>Derek Tam</strong>, Nicholas Monath, Ari Kobren, Andrew McCallum <br /><em>Automated Knowledge Base Construction </em> AKBC
                 2020.<br/>[<a href="https://github.com/iesl/institution_hierarchies">code</a>]
               </li>
             <li><i class="icon-li
@@ -83,7 +83,7 @@
                 of Learned Character Representations for String
                 Similarity. </a> (<strong>Oral
                 Presentation</strong>)<br /> <strong>Derek Tam</strong>, Nicholas Monath, Ari Kobren, Aaron Traylor, Rajarshi Das, Andrew McCallum<br /><em>Association of
-                Computational Linguistics (ACL)</em> July
+                Computational Linguistics </em> ACL
                 2019.<br/>
                 [<a href="https://arxiv.org/abs/1907.10165">arXiv</a>][<a href="https://github.com/iesl/stance">code</a>]
               </li>
