--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 icon-plus"></i>  <a href= "https://aclanthology.org/2021.emnlp-main.407/" >  Improving and Simplifying Pattern Exploiting Training  </a> <br />  <strong>Derek Tam*</strong>, Rakesh R Menon*, Mohit Bansal, Shashank Srivastava, Colin Raffel <br /><em>Empirical Methods in Natural Language Processing </em> EMNLP 2021 (Short).<br/> [<a href="https://arxiv.org/abs/2103.11955">arXiv</a>] [<a href="https://github.com/rrmenon10/ADAPET">code</a>]
               </li>
             <li><i class="icon-li
-                icon-plus"></i>  An Empirical Survey of Data Augmentation for Limited Data Learning in NLP  </a> <br /> Jiaao Chen*,  <strong>Derek Tam*</strong>, Colin Raffel, Mohit Bansal, Diyi Yang   <br /><em>arXiv</em> June 2021.<br/> [<a href="https://arxiv.org/abs/2106.07499">arXiv</a>]
+                icon-plus"></i>  An Empirical Survey of Data Augmentation for Limited Data Learning in NLP  </a> <br /> Jiaao Chen*,  <strong>Derek Tam*</strong>, Colin Raffel, Mohit Bansal, Diyi Yang   <br /><em>Transactions of the Association for Computational Linguistics TACL</em> 2022.<br/> [<a href="https://arxiv.org/abs/2106.07499">arXiv</a>]
               </li>
 
             <li><i class="icon-li
