--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
     <link rel="stylesheet"
           href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="academicons-1.8.0/css/academicons.min.css">
+
+  <style>
+   .icons-ul li {
+      font-size: 16px; /* Adjust the font size for each list item */
+    }
+   	p {
+      font-size: 16px; /* Adjust the font size for paragraphs */
+    }
+    h3 + :first-line  {
+      font-size: 16px; /* Adjust the font size for text below h3 */
+    }
+    .icon-li.icon-circle {
+      font-size: 8px; /* Adjust the font size as needed */
+      margin-top: 6px; /* Adjust the margin-top to shift the icon down */
+    }
+  </style>
+
 </head>
 
 
@@ -40,12 +57,12 @@
 
       <h1 class="page-header">Derek Tam</h1>
       <div class="row">
-            <div class="col-md-4 col-md-push-8">
+            <div class="col-md-3 col-md-push-9">
               <div>
 		              <img class="img-responsive img-rounded" src="dptam.jpg">
-		              <span><span style="padding-right:2px;"></span> dt [dot] derek [dot] tam [at] gmail.com</span><br/>
-		              <span> <span style="padding-right:1px;"></span> [<a href="https://scholar.google.com/citations?user=v30AKYMemPgC&hl=en&authuser=1">Google Scholar</a>]</span><br/>
-	                  <span><span style="padding-right:1px;"></span> [<a href="http://github.com/dptam">Github</a>]</span><br/>
+		              <span><span style="font-size: 14px;"><span style="padding-right:2px;"></span> dt [dot] derek [dot] tam [at] gmail.com</span><br/>
+		              <span><span style="font-size: 18px;"> <span style="padding-right:1px;"></span> [<a href="https://scholar.google.com/citations?user=v30AKYMemPgC&hl=en&authuser=1">Google Scholar</a>]</span><br/>
+	                  <span><span style="font-size: 18px;"><span style="padding-right:1px;"></span> [<a href="http://github.com/dptam">Github</a>]</span><br/>
 		        <br />
 		        <br />
 
@@ -54,40 +71,44 @@
             <!-- /.row -->
 
             <!-- Blog Entries Column -->
-            <div class="col-md-8 col-md-pull-4">
-              <p>I am a Ph.D. student at <a href="https://cs.unc.edu/">UNC Chapel Hill</a> working with Prof  <a href="https://colinraffel.com/">Colin Raffel</a> and Prof <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal </a>. I am interested in updating lanuguage models efficiently and effectively. Also, I am interested in parameter-efficient and few-shot learning. 
+            <div class="col-md-9 col-md-pull-3">
+              <p>I am a Ph.D. student at the University of Toronto (and the Vector Institute) advised by <a href="https://colinraffel.com/">Colin Raffel</a>. I am interested in using principled machine learning methods for solving NLP problems related to collaboratively developing large languge models and efficient training. Specific examples include model merging and parameter-efficient fine-tuning.
               </p>
-
 
           <h2>Publications</h2>
           <ul class="icons-ul">
-          	 <li><i class="icon-li
-                icon-plus"></i>  Evaluating the Factual Consistency of Large Language Models Through Summarization  </a> <br /> <strong> Derek Tam</strong>, Anisha Mascarenhas, Shiyue Zhang, Sarah Kwan, Mohit Bansal, Colin Raffel  <br /><em>  Arxiv </em> November 2022.<br/> [<a href="https://arxiv.org/abs/2211.08412">arXiv</a>] [<a href="https://github.com/r-three/fib">code</a>]
+
+        	 <li><i class="icon-li
+                icon-circle"></i>  <a href="https://arxiv.org/abs/2306.01708">TIES-Merging: Resolving Interference When Merging Models </a> <br />  Prateek Yadav,  <strong> Derek Tam</strong>, Leshem Choshen, Colin Raffel, and Mohit Bansal <br /><em> Conference on Neural Information Processing Systems </em> NeurIps 2023.<br/>
+                </li>
+        	 <li><i class="icon-li
+                icon-circle"></i> <a href= "https://openreview.net/forum?id=UMxeP-FuwyC" >   Simple Weakly-Supervised Image Captioning via CLIP's Multimodal Embeddings </a> <br /> <strong> Derek Tam</strong>, Colin Raffel, Mohit Bansal <br /><em> AAAI Workshop on Creative AI Across Modalities, 2023. </em> February 2023.<br/> 
               </li>
           	 <li><i class="icon-li
-                icon-plus"></i>  Few-Shot Parameter-Efficient Fine-Tuning is Better and Cheaper than In-Context Learning  </a> <br /> Haokun Liu*, <strong> Derek Tam*</strong>, Mohammed Muqeeth*, Jay Mohta, Tenghao Huang, Mohit Bansal, Colin Raffel  <br /><em>  Conference on Neural Information Processing Systems</em> NeurIps 2022.<br/> [<a href="https://arxiv.org/abs/2205.05638">arXiv</a>] [<a href="https://github.com/r-three/t-few">code</a>]
+                icon-circle"></i> <a href= "https://arxiv.org/abs/2211.08412" >   Evaluating the Factual Consistency of Large Language Models Through News Summarization </a> <br /> <strong> Derek Tam</strong>, Anisha Mascarenhas, Shiyue Zhang, Sarah Kwan, Mohit Bansal, Colin Raffel  <br /><em>  Findings of the Association for Computational Linguistics. ACL 2023 </em> July 2023.<br/> 
+              </li>
+          	 <li><i class="icon-li  
+                icon-circle"></i> <a href= "https://arxiv.org/abs/2205.05638" >   Few-Shot Parameter-Efficient Fine-Tuning is Better and Cheaper than In-Context Learning  </a> <br /> Haokun Liu*, <strong> Derek Tam*</strong>, Mohammed Muqeeth*, Jay Mohta, Tenghao Huang, Mohit Bansal, Colin Raffel  <br /><em>  Conference on Neural Information Processing Systems</em> NeurIps 2022.<br/>
+              </li>
+            <li><i class="icon-li  
+                icon-circle"></i> <a href= "https://arxiv.org/abs/2106.07499" >  An Empirical Survey of Data Augmentation for Limited Data Learning in NLP  </a> <br /> Jiaao Chen*,  <strong>Derek Tam*</strong>, Colin Raffel, Mohit Bansal, Diyi Yang   <br /><em>Transactions of the Association for Computational Linguistics TACL</em> 2022.<br/> 
               </li>
             <li><i class="icon-li
-                icon-plus"></i>  An Empirical Survey of Data Augmentation for Limited Data Learning in NLP  </a> <br /> Jiaao Chen*,  <strong>Derek Tam*</strong>, Colin Raffel, Mohit Bansal, Diyi Yang   <br /><em>Transactions of the Association for Computational Linguistics TACL</em> 2022.<br/> [<a href="https://arxiv.org/abs/2106.07499">arXiv</a>]
-              </li>
-            <li><i class="icon-li
-                icon-plus"></i> <a href="https://www.isca-speech.org/archive/pdfs/interspeech_2022/tam22_interspeech.pdf"> Isochrony-Aware Neural Machine Translation for Automatic Dubbing  </a> <br /> <strong>Derek Tam</strong>, Surafel M. Lakew, Yogesh Virkar, Prashant Mathur, Marcello Federico  <br /><em> Interspeech </em> 2022.<br/> [<a href="https://arxiv.org/abs/2112.08548">arXiv</a>]
+                icon-circle"></i> <a href="https://arxiv.org/abs/2112.08548"> Isochrony-Aware Neural Machine Translation for Automatic Dubbing  </a> <br /> <strong>Derek Tam</strong>, Surafel M. Lakew, Yogesh Virkar, Prashant Mathur, Marcello Federico  <br /><em> Interspeech </em> 2022.<br/> 
               </li>
               <li><i class="icon-li
-                icon-plus"></i>  <a href= "https://aclanthology.org/2021.emnlp-main.407/" >  Improving and Simplifying Pattern Exploiting Training  </a> <br />  <strong>Derek Tam*</strong>, Rakesh R Menon*, Mohit Bansal, Shashank Srivastava, Colin Raffel <br /><em>Empirical Methods in Natural Language Processing </em> EMNLP 2021 (Short).<br/> [<a href="https://arxiv.org/abs/2103.11955">arXiv</a>] [<a href="https://github.com/rrmenon10/ADAPET">code</a>]
+                icon-circle"></i>  <a href= "https://arxiv.org/abs/2103.11955" >  Improving and Simplifying Pattern Exploiting Training  </a> <br />  <strong>Derek Tam*</strong>, Rakesh R Menon*, Mohit Bansal, Shashank Srivastava, Colin Raffel <br /><em>Empirical Methods in Natural Language Processing </em> EMNLP 2021 (Short).<br/> 
               </li>
             <li><i class="icon-li
-                icon-plus"></i>  <a href= "https://openreview.net/pdf?id=pJg1LahGc0" > Predicting Institution Hierarchies with Set-based Models. </a> <br />  <strong>Derek Tam</strong>, Nicholas Monath, Ari Kobren, Andrew McCallum <br /><em>Automated Knowledge Base Construction </em> AKBC
-                2020.<br/>[<a href="https://github.com/iesl/institution_hierarchies">code</a>]
+                icon-circle"></i>  <a href= "https://openreview.net/pdf?id=pJg1LahGc0" > Predicting Institution Hierarchies with Set-based Models. </a> <br />  <strong>Derek Tam</strong>, Nicholas Monath, Ari Kobren, Andrew McCallum <br /><em>Automated Knowledge Base Construction </em> AKBC
+                2020.<br/>
               </li>
             <li><i class="icon-li
-                icon-plus"></i>  <a href= "https://www.aclweb.org/anthology/P19-1592/" > Optimal Transport-based Alignment
+                icon-circle"></i>  <a href= "https://arxiv.org/abs/1907.10165" > Optimal Transport-based Alignment
                 of Learned Character Representations for String
-                Similarity. </a> (<strong>Oral
-                Presentation</strong>)<br /> <strong>Derek Tam</strong>, Nicholas Monath, Ari Kobren, Aaron Traylor, Rajarshi Das, Andrew McCallum<br /><em>Association of
+                Similarity. </a> <br /> <strong>Derek Tam</strong>, Nicholas Monath, Ari Kobren, Aaron Traylor, Rajarshi Das, Andrew McCallum<br /><em>Association of
                 Computational Linguistics </em> ACL
-                2019.<br/>
-                [<a href="https://arxiv.org/abs/1907.10165">arXiv</a>][<a href="https://github.com/iesl/stance">code</a>]
+                2019. (Oral)<br/>
               </li>
 
 
@@ -95,9 +116,8 @@
 
 
                 <h3>About Me</h3>
-                I spent the summers of 2021 and 2022 interning at Amazon. Previously, I worked in Prof <a href="https://people.cs.umass.edu/~mccallum/"> Andrew McCallum</a>`s  <a href= "http://www.iesl.cs.umass.edu/"> Information and Extraction Synthesis Lab </a>  while receiving a M.S. in Computer Science at the <a href="http://www.cs.umass.edu"> University of Massachusetts Amherst</a>. Before that, I received a B.S. in Computer Science and Statistics from <a href="https://www.cs.cmu.edu/">Carnegie Mellon University</a>. Ultimately, I aim to live in obedience to and unto the glory of my Lord and Savior Jesus Christ.
+                <p> I spent the first three years of my PhD at UNC Chapel Hill, where I also worked with <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal</a>. Before that, I received a M.S. in Computer Science at the University of Massachusetts Amherst while supervised by <a href="https://people.cs.umass.edu/~mccallum/">Andrew McCallum</a>. I received a B.S. in Computer Science and Statistics from Carnegie Mellon University. Ultimately, I aim to live in obedience to and unto the glory of my Lord and Savior Jesus Christ.</p>
              
-       
                 <hr>
             </div>
 
