--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
 
           <h2>Publications</h2>
           <ul class="icons-ul">
-
+       	 		<li><i class="icon-li
+                icon-circle"></i>  <a href="https://arxiv.org/abs/2312.04339">Merging by Matching Models in Task Subspaces </a> <br />  <strong> Derek Tam</strong>, Mohit Bansal, Colin Raffel <br /><em> Under Submission </em> <br/>
+                </li>
         	 <li><i class="icon-li
-                icon-circle"></i>  <a href="https://arxiv.org/abs/2306.01708">TIES-Merging: Resolving Interference When Merging Models </a> <br />  Prateek Yadav,  <strong> Derek Tam</strong>, Leshem Choshen, Colin Raffel, and Mohit Bansal <br /><em> Conference on Neural Information Processing Systems </em> NeurIps 2023.<br/>
+                icon-circle"></i>  <a href="https://arxiv.org/abs/2306.01708">TIES-Merging: Resolving Interference When Merging Models </a> <br />  Prateek Yadav,  <strong> Derek Tam</strong>, Leshem Choshen, Colin Raffel, Mohit Bansal <br /><em> Conference on Neural Information Processing Systems </em> NeurIps 2023.<br/>
                 </li>
         	 <li><i class="icon-li
                 icon-circle"></i> <a href= "https://openreview.net/forum?id=UMxeP-FuwyC" >   Simple Weakly-Supervised Image Captioning via CLIP's Multimodal Embeddings </a> <br /> <strong> Derek Tam</strong>, Colin Raffel, Mohit Bansal <br /><em> AAAI Workshop on Creative AI Across Modalities, 2023. </em> February 2023.<br/> 
