--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 
 
                 <h3>About Me</h3>
-                <p> I spent the first three years of my PhD at UNC Chapel Hill, where I also worked with <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal</a>. Before that, I received a M.S. in Computer Science at the University of Massachusetts Amherst while supervised by <a href="https://people.cs.umass.edu/~mccallum/">Andrew McCallum</a>. I received a B.S. in Computer Science and Statistics from Carnegie Mellon University. Ultimately, I aim to live in obedience to and unto the glory of my Lord and Savior Jesus Christ.</p>
-             
+                <p> I spent the first three years of my PhD at UNC Chapel Hill, where I also worked with <a href="https://www.cs.unc.edu/~mbansal/">Mohit Bansal</a>. Before that, I received a M.S. in Computer Science at the University of Massachusetts Amherst while supervised by <a href="https://people.cs.umass.edu/~mccallum/">Andrew McCallum</a>. I received a B.S. in Computer Science and Statistics from Carnegie Mellon University. Outside of research, I am also a member of <a href="https://www.friendshipraleigh.org/">Friendship Baptist Church</a>.</p>
                 <hr>
             </div>
 
